--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fashion E-shop</title>
+    <link
+      rel="icon"
+      href="/src/assets/logo.png"
+      sizes="32x32"
+      type="image/png"
+    />
+    <title>Loom & Luxe</title>
   </head>
   <body>
     <div id="root"></div>
