Prepare for GitHub Pages deployment

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       sizes="32x32"
       type="image/png"
     />
-    <title>Loom & Luxe</title>
+    <title>Fashion E-shop</title>
   </head>
   <body>
     <div id="root"></div>
