--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="//logo.png" sizes="32x32" type="image/png" />
+    <link rel="icon" href="/icons/logo.png" sizes="32x32" type="image/png" />
     <title>Fashion E-shop</title>
   </head>
   <body>
